# minikeyvalue

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: database.rs  lib.rs
commands/: Cargo.toml
commands/src/: lib.rs  rebalance.rs  rebuild.rs  server.rs
src/: main.rs
